# OpenGLPractice

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt
src/2d/: CMakeLists.txt
src/2d/catInOrange/: CMakeLists.txt  catInOrange.cpp
src/2d/initGlew/: initGlew.cpp
src/2d/matrixMath/: matrixMath.cpp
src/2d/plot/: plot.cpp  trianglePlot.cpp
src/2d/textureBox/: textureBox.cpp
src/2d/transformation/: transformation.cpp
src/2d/triangle/: triangle.cpp
src/2d/uniform/: uniform.cpp
src/3d/: CMakeLists.txt
src/3d/buttonBox/: buttonBox.cpp
src/3d/cameraMouse/: cameraMouse.cpp
src/3d/cameraWASD/: cameraWASD.cpp
src/3d/colorCubeCamera/: colorCubeCamera.cpp
src/3d/cube/: colorCube.cpp  cube.cpp  textureCube.cpp
src/3d/cubes/: cubes.cpp
src/3d/lab2/: lab2.cpp
src/3d/roundCamera/: roundCamera.cpp
src/api/cameraApi/: cameraApi.cpp  cameraApi.h  cameraApiTest.cpp
src/api/shaderApi/: shaderApi.cpp  shaderApi.h
src/api/texturesApi/: texturesApi.cpp  texturesApi.h
src/catInOrange/: catInOrange.cpp
src/catInOrange/shaders/: vertex.shader
src/elementBufferObjectPractice/: elementBufferObjectPractice.cpp
src/glVersion/: glVersion.cpp
src/invertedTriangle/: invertedTriangle.cpp
src/layout/: layout.cpp
src/light/: CMakeLists.txt
src/light/color/: color.cpp
src/light/color/shaders/: defaultFragment.shader  defaultVertex.shader
src/light/phongLightning/ambient/: ambient.cpp
src/light/phongLightning/diffuse/: diffuse.cpp
src/light/phongLightning/diffuse/shaders/: defaultFragment.shader  defaultVertex.shader
src/light/phongLightning/full/: full.cpp
src/light/phongLightning/specular/: specular.cpp
src/light/phongLightning/specular/shaders/: defaultFragment.shader
src/light/planet/: planet.cpp
src/resources/shaders/: fragment.shader
src/square/: square.cpp
src/textureBox/: textureBox.cpp  textureTriangle.cpp
src/transformation/: transformation.cpp
src/triangle/: triangle.cpp
src/vertexArrayObjectPractice/: vertexArrayObjectPractice.cpp
src/window/: window.cpp
